cmake_minimum_required(VERSION 2.8)
project(libibautils)

file(GLOB SRCS "*.cpp")
file(GLOB HEADERS "*.h" "*.tpp")

ADD_LIBRARY(${LIBIBAUTILS} SHARED ${SRCS})
SET_TARGET_PROPERTIES(${LIBIBAUTILS} PROPERTIES VERSION 0.0.1 SOVERSION 0)

install(TARGETS ${LIBIBAUTILS}
  RUNTIME DESTINATION bin COMPONENT libraries
  LIBRARY DESTINATION lib COMPONENT libraries
  ARCHIVE DESTINATION lib/static COMPONENT libraries)

INSTALL(FILES ${HEADERS} DESTINATION include/ibautils)
